--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -1333,7 +1333,7 @@ form {
 .image-links {
 	max-height: 250px;
 	display: table;
-	margin: 15px auto;
+	margin: 0 auto 10px;
 }
 
 .pull-quote, blockquote {
