--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,6 +25,7 @@
 			<div class="container">
 				<a href="/admin">Admin</a>
 				<a href="/column/new">New Column</a>
+				<a href="/lockerroom/new">New LockerRoom</a>
 				<a href="/player/new">New Player</a>
 			</div>
 		</div>
