--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -14,8 +14,10 @@
 				    </div>
 				   <% } else { %> 
 				   	<% tmp_date = column.updated_at %>
-				   	<hr class="bottom">
-						<p class="date"><%= tmp_date %></p>
+				   	<div class="thing">
+					   	<hr class="bottom">
+							<p class="date"><%= tmp_date %></p>
+						</div>
 						<div class="thing">
 				    	<p><a href="/column/<%= column.slug %>"><%= column.title %></a>
 				    	<span style="float:right"><%= column.updated_at %></span></p>
@@ -23,6 +25,29 @@
 				   <% } %>
 			  <% }) %>
 			  <p><a href="/column/new"><span class="fa fa-plus"></span> New Column</a></p>	
+		  </div>
+			<div class="col-md-6">
+				<h2>Locker Rooms</h2>
+				<% var tmp_date = ''; %>
+				<% lockerrooms.forEach(function(lockerroom){ %>
+					<% if (lockerroom.updated_at == tmp_date) { %>
+				    <div class="thing">
+				    	<p><a href="/lockerroom/<%= lockerroom.slug %>"><%= lockerroom.title %></a>
+				    	<span style="float:right"><%= lockerroom.updated_at %></span></p>
+				    </div>
+				   <% } else { %> 
+				   	<% tmp_date = lockerroom.updated_at %>
+				   	<div class="thing">
+					   	<hr class="bottom">
+							<p class="date"><%= tmp_date %></p>
+						</div>
+						<div class="thing">
+				    	<p><a href="/lockerroom/<%= lockerroom.slug %>"><%= lockerroom.title %></a>
+				    	<span style="float:right"><%= lockerroom.updated_at %></span></p>
+				    </div>
+				   <% } %>
+			  <% }) %>
+			  <p><a href="/lockerroom/new"><span class="fa fa-plus"></span> New Column</a></p>	
 		  </div>
 
 			<div class="col-md-6">
