--- a/views/actual_lockerroom.ejs
+++ b/views/actual_lockerroom.ejs
@@ -35,6 +35,9 @@
 					</div>
 				<% }); %>
 			</div>
+			<div class="col-md-4">
+				<%= include lockerroom-sidebar %>
+			</div>
 		</div>
 	</div>
 
