--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,49 +4,88 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[14].main_image.image_url %>);">
+					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[16].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[14].slug %>">
-									<h3><%= column[14].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[16].slug %>">
+									<h3><%= columns[16].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[14].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[14].player.image_url %>)"></div>
+									<%= columns[16].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[16].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[13].main_image.image_url %>);">
+					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[15].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[13].slug %>">
-									<h3><%= column[13].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[15].slug %>">
+									<h3><%= columns[15].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[13].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[13].player.image_url %>)"></div>
+									<%= columns[15].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[15].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[12].main_image.image_url %>);">
+				</div>
+			</div>
+
+			<div class="row">
+				<hr class="bottom">
+				<p class="date">September 15, 2014</p>
+				<div class="col-md-6">
+					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[14].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[12].slug %>">
-									<h3><%= column[12].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[14].slug %>">
+									<h3><%= columns[14].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[12].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[12].player.image_url %>)"></div>
+									<%= columns[14].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[14].player.image_url %>)"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[13].main_image.image_url %>);">
+						<div class="overcast"></div>
+						<div class="headline">
+							<div class="white banner left">COLUMN:</div>
+							<div class="inner-content">
+								<div class="copy"><a href="/column/<%= columns[13].slug %>">
+									<h3><%= columns[13].title %></h3>
+								</a></div>
+								<div class="byline">
+									<%= columns[13].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[13].player.image_url %>)"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[12].main_image.image_url %>);">
+						<div class="overcast"></div>
+						<div class="headline">
+							<div class="white banner left">COLUMN:</div>
+							<div class="inner-content">
+								<div class="copy"><a href="/column/<%= columns[12].slug %>">
+									<h3><%= columns[12].title %></h3>
+								</a></div>
+								<div class="byline">
+									<%= columns[12].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[12].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
@@ -58,32 +97,32 @@
 				<hr class="bottom">
 				<p class="date">September 14, 2014</p>
 				<div class="col-md-6">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[11].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[11].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[11].slug %>">
-									<h3><%= column[11].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[11].slug %>">
+									<h3><%= columns[11].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[11].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[11].player.image_url %>)"></div>
+									<%= columns[11].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[11].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[10].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[10].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[10].slug %>">
-									<h3><%= column[10].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[10].slug %>">
+									<h3><%= columns[10].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[10].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[10].player.image_url %>)"></div>
+									<%= columns[10].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[10].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
@@ -91,37 +130,38 @@
 				</div>
 
 				<div class="col-md-6">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[9].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[9].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[9].slug %>">
-									<h3><%= column[9].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[9].slug %>">
+									<h3><%= columns[9].title %></h3>
 								</a></div>
 								
 								<div class="byline">
-									<% if (column.slug != 'locks-nfl-week-2') { %>
-									<%= column[9].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[9].player.image_url %>)"></div>
+									<% if (columns[9].slug != 'locks-nfl-week-2') { %>
+									<%= columns[9].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[9].player.image_url %>)"></div>
 									<% } %>
 								</div>
 								
 							</div>
-						</div></div>
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[8].main_image.image_url %>);">
+						</div>
+					</div>
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[8].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[8].slug %>">
-									<h3><%= column[8].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[8].slug %>">
+									<h3><%= columns[8].title %></h3>
 								</a></div>
 								
 								<div class="byline">
-									<% if (column.slug != 'locks-nfl-week-2') { %>
-									<%= column[8].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[8].player.image_url %>)"></div>
+									<% if (columns[8].slug != 'locks-nfl-week-2') { %>
+									<%= columns[8].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[8].player.image_url %>)"></div>
 									<% } %>
 								</div>
 								
@@ -135,17 +175,17 @@
 				<hr class="bottom">
 				<p class="date">September 13, 2014</p>
 				<div class="col-md-12">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[7].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[7].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[7].slug %>">
-									<h3><%= column[7].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[7].slug %>">
+									<h3><%= columns[7].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[7].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[7].player.image_url %>)"></div>
+									<%= columns[7].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[7].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
@@ -157,34 +197,34 @@
 				<hr class="bottom">
 				<p class="date">September 12, 2014</p>
 				<div class="col-md-6">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[6].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[6].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[6].slug %>">
-									<h3><%= column[6].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[6].slug %>">
+									<h3><%= columns[6].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[6].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[6].player.image_url %>)"></div>
+									<%= columns[6].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[6].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[5].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[5].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[5].slug %>">
-									<h3><%= column[5].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[5].slug %>">
+									<h3><%= columns[5].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[5].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[5].player.image_url %>)"></div>
+									<%= columns[5].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[5].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
@@ -197,17 +237,17 @@
 				<hr class="bottom">
 				<p class="date">September 11, 2014</p>
 				<div class="col-md-6">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[4].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[4].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[4].slug %>">
-									<h3><%= column[4].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[4].slug %>">
+									<h3><%= columns[4].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[4].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[4].player.image_url %>)"></div>
+									<%= columns[4].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[4].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
@@ -284,17 +324,17 @@
 				<hr class="bottom">
 				<p class="date">September 9, 2014</p>
 				<div class="col-md-6">
-					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[3].main_image.image_url %>);">
+					<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[3].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[3].slug %>">
-									<h3><%= column[3].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[3].slug %>">
+									<h3><%= columns[3].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[3].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[3].player.image_url %>)"></div>
+									<%= columns[3].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[3].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
@@ -302,32 +342,32 @@
 				</div>
 
 				<div class="col-md-6">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[2].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[2].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[2].slug %>">
-									<h3><%= column[2].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[2].slug %>">
+									<h3><%= columns[2].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[2].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[2].player.image_url %>)"></div>
+									<%= columns[2].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[2].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[1].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[1].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[1].slug %>">
-									<h3><%= column[1].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[1].slug %>">
+									<h3><%= columns[1].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[1].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[1].player.image_url %>)"></div>
+									<%= columns[1].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[1].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
@@ -339,17 +379,17 @@
 				<hr class="bottom">
 				<p class="date">September 8, 2014</p>
 				<div class="col-md-12">
-					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column[0].main_image.image_url %>);">
+					<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= columns[0].main_image.image_url %>);">
 						<div class="overcast"></div>
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= column[0].slug %>">
-									<h3><%= column[0].title %></h3>
+								<div class="copy"><a href="/column/<%= columns[0].slug %>">
+									<h3><%= columns[0].title %></h3>
 								</a></div>
 								<div class="byline">
-									<%= column[0].player.name %>
-									<div class="author-image" style="background-image: url(<%= column[0].player.image_url %>)"></div>
+									<%= columns[0].player.name %>
+									<div class="author-image" style="background-image: url(<%= columns[0].player.image_url %>)"></div>
 								</div>
 							</div>
 						</div>
