--- a/views/index.ejs
+++ b/views/index.ejs
@@ -258,7 +258,7 @@
 						<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
 						<div class="headline">
 							<div class="inner-content">
-								<div class="copy"><a href="/lockerroom/locker-room-whos-the-best-player-you-ever-played-with"><h3>Locker Room: Who's The Best Player You Ever Played With?</h3></a></div>
+								<div class="copy"><a href="/lockerroom/whos-the-best-player-you-ever-played-with"><h3>Locker Room: Who's The Best Player You Ever Played With?</h3></a></div>
 							</div>
 						</div>
 					</div>
@@ -384,7 +384,7 @@
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/<%= columns[0].slug %>">
+								<div class="copy"><a href="/columns/<%= columns[0].slug %>">
 									<h3><%= columns[0].title %></h3>
 								</a></div>
 								<div class="byline">
@@ -403,7 +403,7 @@
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/from-bad-to-badass">
+								<div class="copy"><a href="/columns/from-bad-to-badass">
 									<h3>From Bad to Badass:  Who’ll Turn the Trick in 2014?</h3>
 								</a></div>
 								<div class="byline">
@@ -430,7 +430,7 @@
 						<div class="headline">
 							<div class="white banner left">COLUMN:</div>
 							<div class="inner-content">
-								<div class="copy"><a href="/column/slingin-from-the-pocket">
+								<div class="copy"><a href="/columns/slingin-from-the-pocket">
 									<h3>Slingin from the Pocket</h3>
 								</a></div>
 								<div class="byline">
@@ -463,7 +463,7 @@
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
 									<div class="inner-content">
-										<div class="copy"><a href="/column/how-much-gronk-al-you-can-handle-bud">
+										<div class="copy"><a href="/columns/how-much-gronk-al-you-can-handle-bud">
 											<h3>How Much Gronk? <span class="smaller"> All You Can Handle, Bro.</span></h3>
 										</a></div>
 										<div class="byline">
@@ -492,7 +492,7 @@
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
 									<div class="inner-content">
-										<div class="copy"><a href="/column/reset-forgetting-the-preseason-in-the-nfl">
+										<div class="copy"><a href="/columns/reset-forgetting-the-preseason-in-the-nfl">
 											<h3>Reset: Forgetting the Preseason in the NFL</h3>
 										</a></div>
 										<div class="byline">
@@ -551,7 +551,7 @@
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
 									<div class="inner-content">
-										<div class="copy"><a href="/column/making-it-to-week-1-in-the-nfl"><h3>Making it to Week 1 in the NFL</h3></a></div>
+										<div class="copy"><a href="/columns/making-it-to-week-1-in-the-nfl"><h3>Making it to Week 1 in the NFL</h3></a></div>
 										<div class="byline">
 											Chris Snee
 											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_chrissnee.jpg)"></div>
@@ -603,7 +603,7 @@
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
 									<div class="inner-content">
-										<div class="copy"><a href="/column/start-the-carr-the-case-for-starting-rookie-quarterbacks"><h3>Start the Carr:  The Case for Starting Rookie Quarterbacks</h3></a></div>
+										<div class="copy"><a href="/columns/start-the-carr-the-case-for-starting-rookie-quarterbacks"><h3>Start the Carr:  The Case for Starting Rookie Quarterbacks</h3></a></div>
 										<div class="byline">
 											Brady Quinn
 											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradyquinn.jpg)"></div>
@@ -622,7 +622,7 @@
 								<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
 								<div class="headline">
 									<div class="inner-content">
-										<div class="copy"><a href="/lockerroom/best-day-one-memory"><h3>Best Week One NFL Memory</h3></a></div>
+										<div class="copy"><a href="/lockerroom/best-week-one-nfl-memory"><h3>Best Week One NFL Memory</h3></a></div>
 									</div>
 								</div>
 							</div>
@@ -655,7 +655,7 @@
 								<div class="headline">
 									<div class="white banner left">COLUMN:</div>
 									<div class="inner-content">
-										<div class="copy"><a href="/column/memo-to-johnny-rookie"><h3>Memo to Johnny Rookie</h3></a></div>
+										<div class="copy"><a href="/columns/memo-to-johnny-rookie"><h3>Memo to Johnny Rookie</h3></a></div>
 										<div class="byline">
 											Sage Rosenfels
 											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
@@ -672,7 +672,7 @@
 								<div class="white banner right">COLUMN:</div>
 								<div class="headline">
 									<div class="inner-content">
-										<div class="copy"><a href="/column/nfl-stress-the-m-effers"><h3>NFL Stress & <br>the M-effers</h3></a></div>
+										<div class="copy"><a href="/columns/nfl-stress-the-m-effers"><h3>NFL Stress & <br>the M-effers</h3></a></div>
 										<div class="byline">
 											Grey Ruegamer
 											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
@@ -687,7 +687,7 @@
 								<div class="black banner right">COLUMN:</div>
 								<div class="headline">
 									<div class="inner-content">
-										<div class="copy"><a href="/column/dont-call-me-maybe"><h3>Don't Call Me Maybe</h3></a></div>
+										<div class="copy"><a href="/columns/dont-call-me-maybe"><h3>Don't Call Me Maybe</h3></a></div>
 										<div class="byline">
 											Joel Dreessen
 											<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_joeldreessen.jpg)"></div>
