--- a/views/big-article.ejs
+++ b/views/big-article.ejs
@@ -1,14 +1,14 @@
-<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
+<div class="big-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= entry.main_image.image_url %>);">
 	<div class="overcast"></div>
 	<div class="headline">
 		<div class="white banner left">COLUMN:</div>
 		<div class="inner-content">
-			<div class="copy"><a href="/column/<%= column.slug %>">
-				<h3><%= column.title %></h3>
+			<div class="copy"><a href="/column/<%= entry.slug %>">
+				<h3><%= entry.title %></h3>
 			</a></div>
 			<div class="byline">
-				<%= column.player.name %>
-				<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
+				<%= entry.player.name %>
+				<div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div>
 			</div>
 		</div>
 	</div>
