--- a/views/medium-article.ejs
+++ b/views/medium-article.ejs
@@ -1,16 +1,16 @@
-<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= column.main_image.image_url %>);">
+<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= entry.main_image.image_url %>);">
 	<div class="overcast"></div>
 	<div class="headline">
 		<div class="white banner left">COLUMN:</div>
 		<div class="inner-content">
-			<div class="copy"><a href="/column/<%= column.slug %>">
-				<h3><%= column.title %></h3>
+			<div class="copy"><a href="/column/<%= entry.slug %>">
+				<h3><%= entry.title %></h3>
 			</a></div>
 			
 			<div class="byline">
-				<% if (column.slug != 'locks-nfl-week-2') { %>
-				<%= column.player.name %>
-				<div class="author-image" style="background-image: url(<%= column.player.image_url %>)"></div>
+				<% if (entry.slug != 'locks-nfl-week-2') { %>
+				<%= entry.player.name %>
+				<div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div>
 				<% } %>
 			</div>
 			
