--- a/views/lockerroom.ejs
+++ b/views/lockerroom.ejs
@@ -2,20 +2,16 @@
 	<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
 	<div class="headline">
 		<div class="inner-content">
-			<div class="copy"><a href="/lockerroom/locker-room-whos-the-best-player-you-ever-played-with"><h3>Locker Room: Who's The Best Player You Ever Played With?</h3></a></div>
+			<div class="copy"><a href="/lockerroom/<%= entry.slug %>"><h3><%= entry.title %></h3></a></div>
 		</div>
 	</div>
 </div>
 <div class="locker-authors">
 	<div class="locker-author-wrap">
+		<% entry.lockerentries.forEach(function(lockerentry){ %>
 		<div class="author-image-wrap">
-			<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_jayforeman.jpg)"></div>
+			<div class="author-image" style="background-image: url(<%= lockerentry.player.image_url %>)"></div>
 		</div>
-		<div class="author-image-wrap">
-			<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_earnestbyner.jpg)"></div>
-		</div>
-		<div class="author-image-wrap">
-			<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_bradypoppinga.jpg)"></div>
-		</div>
+		<% }); %>
 	</div>
 </div>
