--- a/views/lockerroom.ejs
+++ b/views/lockerroom.ejs
@@ -1,5 +1,5 @@
 <div class="medium-article lockerroom">
-	<div class="white banner right big"><h5>LOCKER ROOM:</h5></div>
+	<div class="white banner right big uppercase"><h5><%= entry.type %>:</h5></div>
 	<div class="headline">
 		<div class="inner-content">
 			<div class="copy"><a href="/lockerroom/<%= entry.slug %>"><h3><%= entry.title %></h3></a></div>
