--- a/views/medium-article.ejs
+++ b/views/medium-article.ejs
@@ -1,7 +1,7 @@
 <div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev<%= entry.main_image.image_url %>);">
 	<div class="overcast"></div>
 	<div class="headline">
-		<div class="white banner left">COLUMN:</div>
+		<div class="white banner left uppercase"><%= entry.type %>:</div>
 		<div class="inner-content">
 			<div class="copy"><a href="/column/<%= entry.slug %>">
 				<h3><%= entry.title %></h3>
