--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -930,8 +930,9 @@ img {
 	.headline {
 		position: absolute;
 		width: 100%;
-		bottom: 0;
+		top: 40px;
 		color: white;
+		height: 200px;
 
 		.inner-content {
 			padding: 10px;
@@ -946,7 +947,9 @@ img {
 			.byline {
 				text-align: right;
 				font-size: 16px;
-				min-height: 75px;
+				position: absolute;
+				bottom: 10px;
+				right: 10px;
 				.by {
 					color: red;
 				}
@@ -978,14 +981,14 @@ img {
 	background-size: cover;
 	background-position: center;
 	margin-bottom: 0;
-
+	
 	.headline {
 		color: white;
 		display: table-cell;
 		vertical-align: middle;
 		height: 100%;
 		position: relative;
-
+		top: 0;
 		.inner-content {
 			.copy {
 				font-size: 30px;
